letter spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -1341,6 +1341,7 @@ footer {
     color: white;
     font-family: "TTNorms-Regular";
     font-weight: normal;
+    letter-spacing: 0.079px;
 }
 
 .about-items a {
